wip admin design

--- a/public/admin/css/blockchain-activity-log.css
+++ b/public/admin/css/blockchain-activity-log.css
@@ -3,7 +3,7 @@ th {
 }
 
 table {
-  outline: 2px solid #503a96;
+  outline: 0.05rem solid #503a96;
 }
 
 /* .textie-left {
@@ -16,4 +16,14 @@ th {
 
 td {
   padding: 0.2rem 0.15rem;
+}
+
+.polygon-img {
+  width: 2.5rem;
+  height: auto;
+  filter: invert(13%) sepia(100%) saturate(800%) hue-rotate(345deg) brightness(80%);
+}
+
+.polygon-img.tinted {
+  filter: invert(13%) sepia(100%) saturate(800%) hue-rotate(345deg) brightness(80%);
 }
