--- a/views/admin/blockchain-activity-log.ejs
+++ b/views/admin/blockchain-activity-log.ejs
@@ -27,7 +27,7 @@
       <main class="main">
         <div class="title-container">
           <div class="r">
-            <i class="fa-brands fa-ethereum"></i>
+                  <i class="fa fa-link"></i>
             <h1 class="title">Blockchain Activity Log</h1>
           </div>
   
