--- a/public/admin/css/configuration.css
+++ b/public/admin/css/configuration.css
@@ -11,8 +11,8 @@
   display: flex;
   flex-direction: column;
   flex-basis: 55%;
-  background-color: #a2ad59;
-  border: 0.2rem solid #28303b;
+  background-color: #4d6034;
+  border: 0.2rem solid #879147;
   margin-right: 1.5rem;
   padding: 1.5rem;
 }
@@ -23,10 +23,14 @@
 
 .election-info {
   font-size: 1.2rem;
-  background-color: #a8c69f;
+  background-color: #beeaa3;
   padding: 2%;
   border-radius: 0.5em;
-  border: 0.2rem solid #5fb643;
+  border: 0.15em solid green;
+  border-left: 0.5em solid green;
+  /* border-bottom: 0.5em solid green; */
+  /* box-shadow: 0 6px 16px rgba(85, 12, 10, 0.4); */
+  margin-bottom: 0.9rem;
 }
 
 .election-name {
@@ -35,14 +39,15 @@
 
 .create-election {
   font-size: 1.2rem;
-  background-color: #cce2a3;
+  background-color: #d3eec3;
+
   padding: 2%;
   border-radius: 0.5em;
-  border: 0.2rem solid #2c86fd;
+  border: 0.15rem solid rgb(124, 179, 124);
 }
 
 hr {
-  border: 0.1rem solid #28303b;
+  border: 0.099rem solid #0b8000;
 }
 
 .create-election form > * {
@@ -188,14 +193,15 @@ hr {
   outline: none;
   overflow: hidden;
   background-color: #f3f3f3;
-  border-radius: 10px;
-  transition: all 0.5s;
+  border-radius: 0.5em;
+  /* transition: all 0.5s; */
+  border: 0.03em solid green;
 }
 
 .input:hover,
 .input:focus {
-  border: 2px solid #4a9dec;
-  box-shadow: 0px 0px 0px 7px rgb(74, 157, 236, 20%);
+  border: 2px solid green;
+  box-shadow: 0px 0px 0px 7px rgba(74, 236, 136, 0.2);
   background-color: white;
 }
 
@@ -272,7 +278,7 @@ hr {
 }
 
 .blue {
-  color: #451b9d;
+  color: #283844;
 }
 
 .semi-bold {
@@ -295,10 +301,32 @@ hr {
   align-items: center;
 }
 
-.election-info i {
-  color: #0b8000;
+.election-info i,
+.gray {
+  color: green;
 }
 
 .num-of-students label {
   font-weight: 500;
+}
+
+.election-name,
+.election-info .semi-bold {
+  color: #28303b;
+}
+
+/* .election-info .semi-bold {
+  font-weight: 600;
+}
+
+.semi-boldgr {
+  font-weight: 500;
+}
+
+.semi-boldgre {
+  font-weight: 600;
+} */
+
+.hey {
+  color: #28303b;
 }
