--- a/public/admin/css/index-admin.css
+++ b/public/admin/css/index-admin.css
@@ -57,7 +57,7 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: border-box !important;
 }
 
 body {
@@ -419,13 +419,13 @@ h6 {
 .save-button,
 .button-save,
 .resume {
-  background-color: #4d9246;
+  background-color: #008000;
 }
 
 .cancel-button,
 .button-cancel,
 .reset {
-  background-color: #b63838;
+  background-color: #a60212;
 }
 
 .blockchain-button {
@@ -442,7 +442,7 @@ h6 {
 }
 
 .button-brown {
-  background: linear-gradient(#6e1311, #310505);
+  background: #85211d;
 }
 
 .button-container-center {
@@ -698,7 +698,7 @@ strong {
 table {
   /* background-color: #5fb643; */
   text-align: center;
-  border-radius: 1.5rem;
+  border-radius: 1em;
   overflow: hidden; /* Ensures rounded corners are clean */
   border-collapse: separate; /* Avoids sharp corners */
   border-spacing: 0;
@@ -726,11 +726,11 @@ th {
 }
 
 tr:nth-child(odd) {
-  background-color: #faf2db;
+  background-color: rgb(249, 247, 247);
 }
 
 tr:nth-child(even) {
-  background-color: #d3cdc3;
+  background-color: #dfe0e0;
 }
 
 .indent {
@@ -816,6 +816,15 @@ button:active {
   transform: scale(0.95); /* Adds a click effect */
 }
 
+.button:hover {
+  filter: brightness(1.2); /* Lightens the color */
+}
+
+.button:active {
+  filter: brightness(0.8); /* Darkens the color */
+  transform: scale(0.95); /* Adds a click effect */
+}
+
 .title,
 .title-line,
 .r {
@@ -833,4 +842,8 @@ button:active {
 
 .box-shadow {
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+#resetCandidatesBtn:hover {
+  background-color: #503a96;
 }
